--- a/bibliography.bib
+++ b/bibliography.bib
@@ -181,3 +181,13 @@ month = apr
   organization={International Transport Forum Discussion Paper}
 }
 
+@article{kuznets1955economic,
+  title={Economic growth and income inequality},
+  author={Kuznets, Simon},
+  journal={The American economic review},
+  volume={45},
+  number={1},
+  pages={1--28},
+  year={1955},
+  publisher={JSTOR}
+}
