word cutting and data

--- a/RandPackagesCitations.bib
+++ b/RandPackagesCitations.bib
@@ -5,3 +5,18 @@
   address = {Vienna, Austria},
   year = {2015},
   url = {https://www.R-project.org/},
+
+ @Manual{,
+    title = {devtools: Tools to Make Developing R Packages Easier},
+    author = {Hadley Wickham and Winston Chang},
+    year = {2016},
+    note = {R package version 1.10.0},
+    url = {https://CRAN.R-project.org/package=devtools},
+  }
+
+@Manual{,
+  title = {Quandl: API Wrapper for Quandl.com},
+  author = {{Raymond McTaggart} and {Gergely Daroczi} and {Clement Leung}},
+  year = {2015},
+  note = {R package version 2.7.0},
+  url = {https://github.com/quandl/quandl-r},
