--- a/bibliography.bib
+++ b/bibliography.bib
@@ -191,3 +191,20 @@ month = apr
   year={1955},
   publisher={JSTOR}
 }
+
+@online{IMF,
+  author = {IMF Cross Country Macroecononmic Statistics,
+  title = {Singapore GDP per Capita at Current Prices, LCU},
+  year = 2015,
+  url = {https://www.quandl.com/data/ODA/SGP_NGDPPC-Singapore-GDP-per-Capita-at-Current-Prices-LCU},
+  urldate = {2016–03-23}
+}
+
+@online{Clio,
+author = {Clio Infra,
+  title = {Income Inequality - Singapore},
+  year = 2015,
+  url = {https://www.quandl.com/data/CLIO/SGP_II-Income-Inequality-Singapore},
+  urldate = {2016–03-23}
+}
+
