--- a/ReseachProposal.Rmd
+++ b/ReseachProposal.Rmd
@@ -21,15 +21,20 @@ bibliography: bibliography.bib
 # Set working directory
 getwd()
 try(setwd("/Users/emiliasicari/Desktop/Assignment_2/ResearchProposal/"), silent = TRUE)
-try(setwd("/Users/rafalopezv/Dropbox/R/ResearchProposal/"), silent = TRUE)
-getwd()
+#Install and load packages
+install.packages("devtools")
+library(devtools)
+install_github('quandl/R-package')
+library(Quandl)
+#Citing the packages
+toBibtex(citation('devtools'))
+toBibtex(citation('Quandl'))
 ```
+Word count: 1.889
 
 #Introduction
 
-In the last decades, the increase in income inequality has raised growing concern. In fact, income inequality is not only a problem of developed economies, where the gap between rich and poor is at highest levels in decades, but also in emerging economies, experiencing more mixed trends. In fact, all over access we find pervasive disparities (Dabla-Norris E., Kochhar, K., Suphaphiphat, N., Ricka, F. et alia, 2015).Inequality triggers individual and collective behavior which rational choice model can not explain thouroughly. Behavioral economics, as a complement, and sometimes as a challenge to the standar approach, may help undertsand what are the direvers that connect inequality with consumption of luxury goods, namely cars. The following research outline, suggest the methid to adress such chaallneges in Singapore. 
-
-In the last decades, the increase in income inequality has raised growing concern. In 2013 inequality and lack of mobility were defined as "the challenge of our time" by President Obama and one year later Pope Francis condemned the global "economy of exclusion". In fact, income inequality is not only a problem of developed economies, where the gap between rich and poor is at highest levels in decades, but also in emerging economies, experiencing more mixed trends. In fact, all over access we find pervasive disparities [@dabla2015causes]. 
+In the last decades, the increase in income inequality has generated growing concern. In 2013 it was defined "the challenge of our time" by President Obama and one year later Pope Francis condemned the global "economy of exclusion". In fact, it is a problem in both developed economies, where the gap between rich and poor is at highest levels in decades, and  emerging economies, experiencing more mixed trends [@dabla2015causes].Inequality triggers individual and collective behavior which rational choice model can not explain thouroughly. Behavioral economics, as a complement, and sometimes as a challenge to the standard approach, may help undertsand what are the direvers that connect inequality with consumption of luxury goods, namely cars. The following research outline, suggest the methid to adress such chaallneges in Singapore. 
 
 #Research question, variables, hypotheses and justification
 
@@ -53,7 +58,7 @@ The aim of our work is to investigate the relationship between the rise in inequ
 
 #Justification
 
-Singapore claims to be a successful country, which implies competition and development inequality in comparison with other countries that lack Singapore's success standards. The government of Singapore constantly displays [**how well ranked the country is**]( http://www.egov.gov.sg/accolades-and-awards-international-awards), in order to promote the *'success'* paradigm. Kishore Mahbudani, Dean of Lee Kuan Yew School of Public Policy, recently stated that the island went from having a 500 dollars GDP per capita in 1965 to 76237 dollars in 2015, almost doubling U.K., its former colonizer. Likewise, He said that *More than one in six households have $1 million in cash savings* [@LecturebyDeanKish:2015vv] The international competitiveness of Singapore is out of doubt. However, how competitive Singaporeans between each other are, how unequal the society is and what is triggered by this traits, are considerations worth analyzing. 
+Singapore claims to be a successful country, which implies competition and development inequality in comparison with other countries that lack Singapore's success standards. The government of Singapore constantly displays [**how well ranked the country is**]( http://www.egov.gov.sg/accolades-and-awards-international-awards), in order to promote the *'success'* paradigm. Kishore Mahbudani, Dean of Lee Kuan Yew School of Public Policy, recently stated that the island went from having a 500 dollars GDP per capita in 1965 to 76.237 dollars in 2015, almost doubling U.K., its former colonizer. Likewise, He said that *More than one in six households have $1 million in cash savings* [@LecturebyDeanKish:2015vv] The international competitiveness of Singapore is out of doubt. However, how competitive Singaporeans between each other are, how unequal the society is and what is triggered by this traits, are considerations worth analyzing. 
 
 
 In a recent survey[@Mahbudani:2015vu], 9 out 15 Singaporeans agreed that its society is based on competitiveness, materialism, self-centredness, *'kiasi-ism'* (being afraid to die) and blame-shifting. Additionally,the same rate of Singaporean youngsters are worried that extreme competition would get them out of not affording what they called "basic goods", namely flats and a cars [@Rachel:2014wq]
@@ -66,24 +71,13 @@ When the so called development world, where Singapore belongs, is steadily reduc
 
 ## Economic growth and inequality
 
-Inequality indicates differences in income, consumption or wealth associated with social welfare. Income is widely defined as the amount of money in a given period of time that an individual can spend in consumption without altering the value of their wealth. Economic growth is the rise GDP and GDP in per capita, which is usually considered function of the level of savings and investment. Finally, income distribution is the amount of income that individuals receive in a given society. There are two concepts attached to income distribution that can be found in the literature: functional and size distribution. The functional approach how total income is distributed between land, labour and capital. Instead, size distribution shows how much income is received by individuals (or households) 
+The relations between growth and inequality is bilateral. On the one hand, a rise in income inequality, results in a fall in economic growth. There are several reasons explaining this causal relation. First, income inequality triggers political instability, which, in turn, tends to reduce investment and - consequently - economic growth.  Moreover, disparities in income distribution encourage poor people to undertake rent-seeking or illegal activities threatening property rights, and that drives down investment [@alesina1996income]. In addition, inequality reduces the capacity of poorer members of the society to invest in education thus hampering social mobility and skill development [@cingano2014trends]. Moreover, it reduces social consensus required to adjust shocks and sustain growth. Neverthess, all those effects may be non linear: increases in inequality from low levels provides growth enhancing incentives, while increases part some point encourage rent-seeking and lower growth [@ostry2014redistribution]. Finally, in highly unequal context, the majority of the voters - who are usually poor - ask for redistributive policies, which decrease the after-tax marginal product of capital, hence lowering the rate of accumulation and driving down growth  [@alesina1996income]. Nevertheless, redistribution policies may also  affect growth positively, by reducing tensions and incentivizing productive activities and capital accumulation. Yet, the net effect of redistributive policies on growth has to weigh the costs of distortionary taxation against the benefits of reduced social tensions. More broadly, taxation may not be inherently detrimental to growth, as long as it reduces tax expenditure or loopholes that benefit the rich, increases public investment through progressive taxation or social insurance spending on welfare favouring poor people [@ostry2014redistribution]. 
 
-The relations between growth and inequality is bilateral. On the one hand, it is widely recognized that a rise in income inequality, results in a fall in economic growth. According to OECD (2014), income inequality has a negative and statistically significant impact on medium-term growth: rising inequality by 3 Gini points, the average in OECD countries over the past two decades, would drag down economic growth by 0.35% per year for 25 years, causing a cumulated loss in GDP at the end of the period amounting to 8.5%. There are several reasons explaining this causal relation. First, income inequality triggers political instability, which, in turn, tends to reduce investment and - consequently - economic growth.  Moreover, disparities in income distribution encourage poor people to undertake rent-seeking or illegal activities threatening property rights, and that drives down investment too (Alesina, Perotti, 1996). In addition, inequality reduces the capacity of poorer members of the society to invest in education thus hampering social mobility and skill development (Cingano, 2014) and reduces social consensus required to adjust shocks and sustain growth. Neverthess, all those effects may be non linear: increases in inequality from low levels provides growth enhancing incentives, while increases part some point encourage rent-seeking and lower growth (Ostry, J. D., Berg A., Tsangarides, G. C., 2014). Finally, in highly unequal context, the majority of the voters - who are usually poor - ask for redistributive policies, which decrease the after-tax marginal product of capital, hence lowering the rate of accumulation and driving down growth (Alesina, Perotti 1996). Nevertheless, it is worth noting that redistribution policies may also positively affect growth, by reducing tensions and incentivizing productive activities and capital accumulation. Yet, the net effect of redistributive policies on growth has to weigh the costs of distortionary taxation against the benefits of reduced social tensions. More broadly, taxation may not be inherently detrimental to growth, as long as it reduces tax expenditure or loopholes that benefit the rich, increases public investment through progressive taxation or social insurance spending on welfare favouring poor people (Ostry, J. D., Berg A., Tsangarides, G. C., 2014). 
+On the other hand, economic growth may produce a rise in income inequality, leading to social tensions and political discontent that jeopardize the wellbeing of society [@gallo2002economic]. According to the inverted U hypothesis[@kuznets1955economic], there income inequality widens in the early phases of economic growth; then it stabilizes for a while; and finally it narrows in the later phases. There are two factors explaining the rise in income inequality. First, the concentration of savings in the hands of the upper social classes leads to higher amount of income for them and their descendants. Second, increase in the urban share of the population resulting from economic growth is assumed to be more unequal than rural population, whose income is lower than the urban one. Hence, this gap in relative mean incomes tends to widen as a result of a more rapid growth of the per capita productivity in economic urban activities than in agriculture. However, such negative effects of economic growth only hold in the short run, since in the long run this trend tends to reverse due to government redistribution policies and other exogenous factors (the decrease in the proportion of rich families and immigration entering at the lower income levels). Moreover, this tendency towards increasing inequality is reversed when all the surplus labour is absorbed into modern sector employment, becoming a scarce factor of production. Therefore, further growth, implying an increase in labour demand, will push the wages up, thus levelling inequality. However, no definite causal relation has been found that allows generalizing the ways in which economic growth affects income inequality. Instead, empirical evidence shows that the impact of economic growth on income distribution depends more on the way in which growth is pursued than on the level of per capita income or the rate of growth [@gallo2002economic]. 
 
-On the other hand, economic growth may produce a rise in income inequality, leading to social tensions and political discontent that jeopardize the wellbeing of society (Gallo, C., 2002). According to the inverted U hypothesis (Kuznets, 1955, p. 18), there is a long swing in the inequality characterizing the secular income structure: widening in the early phases of economic growth, when the transition from the preindustrial to the industrial civilization was most rapid; becoming stabilized for a while; and then narrowing in the later phases???. There are two factors explaining the rise in income inequality. First, the concentration of savings in the hands of the upper social classes leads to higher amount of income for them and their descendants. Second, increase in the urban share of the population resulting from economic growth is assumed to be more unequal than rural population, whose income is lower than the urban one. Hence, this gap in relative mean incomes tends to widen as a result of a more rapid growth of the per capita productivity in economic urban activities than in agriculture. However, such negative effects of economic growth only hold in the short run, since in the long run this trend tends to reverse due to government redistribution policies and other exogenous factors (the decrease in the proportion of rich families and immigration entering at the lower income levels). Moreover, this tendency toward increasing inequality is reversed when all the surplus labour is absorbed into modern sector employment, becoming a scarce factor of production. Therefore, further growth, implying an increase in labour demand, will push the wages up, thus levelling inequality. However, despite the relation between economic growth and inequality has been widely investigated in the literature, no definite causal relation has been found that allows generalizing the ways in which economic growth affects income inequality. Instead, empirical evidence shows that the impact of economic growth on income distribution depends more on the way in which growth is pursued than on the level of per capita income or the rate of growth (Gallo, 2002). 
+Income inequality depends on policies and institutions. Particularly, policies have to target social strata earning the lowest incomes, through anti poverty programmes, cash transfers, job-related training and education, and access to public services [@cingano2014trends]. Particularly, public services mitigate the impact on uneven distribution of income, by endowing the poorest strata with 'virtual income'. However, in order to be effective, they must be delivered for free or provide user fees granting accessibility to the lower classes [@seery2014working]. In fact, public services like education, health care, housing and elderly care activate indirect flows that affect household's consumption possibilities and their capacity to attend their needs, thus affecting the distribution of resources across households [@verbist2012impact]
 
-Income inequality depends on policies and institutions. Particularly, policies have to target social strata earning the lowest incomes, through anti poverty programmes, cash transfers, job-related training and education, and access to public services (Cingano, 2014). Particularly, public services mitigate the impact on uneven distribution of income, by endowing the poorest strata with 'virtual income'. For instance, in OECD countries public services are worth the 76% of the net income of the poorest groups and just 14% of the richest and they are considered to reduce inequality by an average on 20%. However, in order to be effective, they must be delivered for free or provide user fees granting accessibility to the lower classes (Seery, 2014) (for example, they have to be means-tested). In fact, public services like education, health care, housing and elderly care activate indirect flows that affect household's consumption possibilities and their capacity to attend their needs, thus affecting the distribution of resources across households (Verbist, Ferster, Vaalavuo, 2014)
-
-Inequality indicates differences in income, consumption or wealth associated with social welfare. Income is widely defined as the amount of money in a given period of time that an individual can spend in consumption without altering the value of their wealth. Economic growth is the rise GDP and GDP in per capita, which is usually considered function of the level of savings and investment. Finally, income distribution is the amount of income that individuals receive in a given society. There are two concepts attached to income distribution that can be found in the literature: functional and size distribution. The functional approach how total income is distributed between land, labour and capital. Instead, size distribution shows how much income is received by individuals (or households) [@gallo2002economic]
-
-The relations between growth and inequality is bilateral. 
-On the one hand, it is widely recognized that a rise in income inequality, results in a fall in economic growth. Income inequality has a negative and statistically significant impact on medium-term growth: rising inequality by 3 Gini points ??? that is the average recorded in OECD country over the past two decades ??? would drag down economic growth by 0.35% per year for 25 years, causing a cumulated loss in GDP at the end of the period of 8.5% [@cingano2014trends]. There are several reasons explaining this causal relation. First, income inequality triggers political instability, which, in turn, tends to reduce investment and - consequently - economic growth.  Moreover, disparities in income distribution encourage poor people to undertake rent-seeking or illegal activities threatening property rights, and that drives down investment too [@alesina1996income]. In addition, inequality reduces the capacity of poorer members of the society to invest in education thus hampering social mobility and skill development [@cingano2014trends] and reduces social consensus required to adjust shocks and sustain growth. Neverthess, all those effects may be non linear: increases in inequality from low levels provides growth enhancing incentives, while increases part some point encourage rent-seeking and lower growth [@ostry2014redistribution]. Finally, in highly unequal context, the majority of the voters - who are usually poor - ask for redistributive policies, which decrease the after-tax marginal product of capital, hence lowering the rate of accumulation and driving down growth [@alesina1996income]. Nevertheless, it is worth noting that redistribution policies may also positively affect growth, by reducing tensions and incentivizing productive activities and capital accumulation. Yet, the net effect of redistributive policies on growth has to weigh the costs of distortionary taxation against the benefits of reduced social tensions. More broadly, taxation may not be inherently detrimental to growth, as long as it reduces tax expenditure or loopholes that benefit the rich, increases public investment through progressive taxation or social insurance spending on welfare favouring poor people [@ostry2014redistribution]. 
-
-On the other hand, economic growth may produce a rise in income inequality, leading to social tensions and political discontent that jeopardize the wellbeing of society [@gallo2002economic]. According to the inverted U hypothesis [@kuznets1955economic], there is "a long swing in the inequality characterizing the secular income structure: widening in the early phases of economic growth, when the transition from the preindustrial to the industrial civilization was most rapid; becoming stabilized for a while; and then narrowing in the later phases". There are two factors explaining the rise in income inequality. First, the concentration of savings in the hands of the upper social classes leads to higher amount of income for them and their descendants. Second, increase in the urban share of the population resulting from economic growth is assumed to be more unequal than rural population, whose income is lower than the urban one. Hence, this gap in relative mean incomes tends to widen as a result of a more rapid growth of the per capita productivity in economic urban activities than in agriculture. However, such negative effects of economic growth only hold in the short run, since in the long run this trend tends to reverse due to government redistribution policies and other exogenous factors (the decrease in the proportion of rich families and immigration entering at the lower income levels). Moreover, this tendency toward increasing inequality is reversed when all the surplus labour is absorbed into modern sector employment, becoming a scarce factor of production. Therefore, further growth, implying an increase in labour demand, will push the wages up, thus levelling inequality. However, despite the relation between economic growth and inequality has been widely investigated in the literature, no definite causal relation has been found that allows generalizing the ways in which economic growth affects income inequality. Instead, empirical evidence shows that the impact of economic growth on income distribution depends more on the way in which growth is pursued than on the level of per capita income or the rate of growth [@gallo2002economic]. 
-
-Income inequality depends on policies and institutions. Particularly, policies have to target social strata earning the lowest incomes, through anti poverty programmes, cash transfers, job-related training and education, and access to public services [@cingano2014trends]. Particularly, public services mitigate the impact on uneven distribution of income, by endowing the poorest strata with 'virtual income'. For instance, in OECD countries public services are worth the 76% of the net income of the poorest groups and just 14% of the richest and they are considered to reduce inequality by an average on 20%. However, in order to be effective, they must be delivered for free or provide user fees granting accessibility to the lower classes [@seery2014working] (for example, they have to be means-tested). In fact, public services like education, health care, housing and elderly care activate indirect flows that affect household's consumption possibilities and their capacity to attend their needs, thus affecting the distribution of resources across households [@verbist2012impact]
-
-A part from the already mentioned public services, even public transports affect income distribution and the standard of living of households and individuals. For example, subsidies on public transport make mobility more affordable to low income groups [@verbist2012impact] As long as public transports grant the opportunity to get key services at reasonable cost, in reasonable time, with reasonable ease, they can reduce income disparity and social exclusion by easing access to job opportunities, learning, health care, food, and social, cultural and sporting activities. Moreover, they also reduce the impact of traffic on deprived communities. Therefore, distributive effects of public transports can be either direct - the reduction in the financial cost of mobility - or indirect - the increase in opportunities of the beneficiaries, especially with regards to the labour market. Many studies find that public transport subsidies appear to make the poorest better off, though there is variation by mode of transportation (e.g. bus travel subsidies turned out be more pro-poor than those for rail transport), by geographical location [@lewis2011economic]. 
+A part from the already mentioned public services, even public transports affect the standard of living of households and individuals. For example, subsidies on public transport make mobility more affordable to low income groups [@verbist2012impact]. As long as public transports grant the opportunity to get key services at reasonable cost, in reasonable time, with reasonable ease, they can reduce income disparity and social exclusion by easing access to job opportunities, learning, health care, food, and social, cultural and sporting activities. Therefore, distributive effects of public transports can be either direct (the reduction in the financial cost of mobility) or indirect -(the increase in opportunities). Many studies find that public transport subsidies appear to make the poorest better off, though there is variation by mode of transportation (e.g. bus travel subsidies turned out be more pro-poor than those for rail transport), by geographical location [@lewis2011economic]. 
 
 A link between improved transport and diminished regional disparities in income and well-being is evident in both emerging and developed economies, but the relative effectiveness of improvements in mobility to reduce poverty depends on the degree to which a society is already developed [@lewis2011economic]. 
 
@@ -99,7 +93,16 @@ Reference points are mental thresholds that individual set in order to compare t
 
 In the case of Singapore, car purchasing deterrents were created to avoid an overpopulation of cars. However, mainly those were based on the rational choice model, pretending a change in individuals behaviour, which came rarely [@Low:2012wb]
 
-#Data and methodology (including statistical methods)
+#Data and methodology
+To measure our variables, we will use the following data.
+
+1. Economic growth
+Economic growth is measured by Singapore's GDP per capita at current princes from 1960 to 2015, espressed in current national currency. Data are derived by dividing current price GDP by total population and are sourced by IMF Cross Country Macroeconomic Statistics open data available on quandl (https://www.quandl.com/data/ODA/SGP_NGDPPC) [@IMF]. Data will be imported to R in CSV format. 
+
+2. Income inequality
+Income inequality is measured by the Gini index considering the time span between 1960 and 2015. Data are available on quandl from the data base Clio Infra (https://www.quandl.com/data/CLIO/SGP_II) [@Clio] and will be imported to R in CSV format.
+
+The link between economic growth and inequality will be investigated through a regression analysis. 
 
 #References
 
