very last version (hopefully)

--- a/ReseachProposal.Rmd
+++ b/ReseachProposal.Rmd
@@ -104,9 +104,7 @@ To measure our variables, we will use the following data.
 Economic growth is measured by Singapore's GDP per capita at current princes from 1960 to 2015, espressed in current national currency. Data are derived by dividing current price GDP by total population and are sourced by IMF Cross Country Macroeconomic Statistics open data available on quandl (https://www.quandl.com/data/ODA/SGP_NGDPPC) [@IMF]. Data will be imported to R in CSV format. 
 
 2. Income inequality
-Income inequality is measured by the Gini index considering the time span between 1960 and 2015. Data are available on quandl from the data base [**Clio Infra**](https://www.quandl.com/data/CLIO/SGP_II) [@Clio] and will be imported to R in CSV format.
-
-The link between economic growth and inequality will be investigated through a regression analysis. 
+Income inequality is measured by the Gini index considering the time span between 1960 and 2015. Data are available on quandl from the data base [**Clio Infra**](https://www.quandl.com/data/CLIO/SGP_II) [@Clio] and will be imported to R in CSV format.The link between economic growth and inequality will be investigated through a regression analysis. 
 
 3. Usage of public and private transport systems in Singapore
 The government of singapore has an [**Open Data Portal**](https://data.gov.sg) which provides data on [Annual motor vehicle population by type of vehicles from 1960 to 2015](https://data.gov.sg/dataset/annual-motor-vehicle-population-by-type-of-vehicles) in csv format with a https url path.Likewise data of [Average Daily Public Transport Ridership](https://data.gov.sg/dataset/public-transport-utilisation-average-public-transport-ridership) is provided in the same format   
