--- a/ReseachProposal.Rmd
+++ b/ReseachProposal.Rmd
@@ -8,14 +8,15 @@ output:
     number_sections: yes
     toc: true
     toc_depth: 2
---bibliography: bibliography.bib 
-link citation: true
+  bibliography: 
+  - bibliography.bib
 ---
 
 ```{r, echo=FALSE, warning=FALSE, error=FALSE, message=FALSE, include=FALSE, results = 'asis'}
 
 ```
-Word count: 1.889
+
+\pagebreak
 
 # Introduction
 
@@ -95,5 +96,8 @@ Income inequality is measured by the Gini index considering the time span betwee
 The government of singapore has an [**Open Data Portal**](https://data.gov.sg) which provides data on [Annual motor vehicle population by type of vehicles from 1960 to 2015](https://data.gov.sg/dataset/annual-motor-vehicle-population-by-type-of-vehicles) in csv format with a https url path.Likewise data of [Average Daily Public Transport Ridership](https://data.gov.sg/dataset/public-transport-utilisation-average-public-transport-ridership) is provided in the same format   
 
 Both data sets will be downloaded using the repmis package and the source_data command
+
+
+Word count: 1.889
 
 # References
