Missing comma added

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -24,7 +24,7 @@ month = nov
 title = {{Lecture by Dean Kishore Mahbubani at the Dili Convention Centre}},
 author = {Mahbudani, Kishore},
 month = mar,
-year = {2015}
+year = {2015},
 url = {https://www.mof.gov.tl/lecture-by-dean-kishore-mahbubani-at-the-dili-convention-centre/?lang=en}
 }
 
